tests/fixtures/security/certs/invalid/missing_intermediate.store
store_id=missing-intermediate-store
store_version=1
updated_at_utc=2026-03-11T08:30:00Z
revocation_source=file://revocation/cache/root
record|roots|1111111111111111111111111111111111111111111111111111111111111111|CN=Root CA|CN=Root CA|root|2026-01-01T00:00:00Z|2036-01-01T00:00:00Z|1000
record|device_certs|8888888888888888888888888888888888888888888888888888888888888888|CN=Projector|CN=Missing Intermediate|client|2026-01-01T00:00:00Z|2028-01-01T00:00:00Z|1008
issuer_role_hint|8888888888888888888888888888888888888888888888888888888888888888|intermediate
